#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

HP-2011-05-27-0: Bugfix:      PDC_INTERVAL=NEVER does not work
                 Issue:       GE-3474
                 Review:      EB

EB-2011-05-26-0: Bugfix:      clone upgrade might fail if master host is 
                              referenced in host_aliases file.
                 Issue:       GE-3481
                 Review:      DG

JG-2011-05-25-0: Enhancem.:   try to detect location of libc.so.6 on Linux in
                              arch script
                 Issue:       GE-3467
                 Review:      SH

SH-2011-05-25-0: Bugfix:      Read from stderr even if stdout is already closed
                              (IJS)
                 Issue:       GE-3190
                 Review:      SH

HP-2011-05-25-0: Bugfix:      on Windows, the loadcheck.exe binary output
                              misses a line break
                 Issue:       GE-3503
                 Review:      SH

SH-2011-05-19-0: Bugfix:      use absolute pathnames for dynamically opening
                              openssl-libraries instead of just the lib-name
                 Issue:       GE-3464
                 Review:      SH

JG-2011-05-19-0: Enhancem.:   need better os version handling on aix for arch
                              and ibm-loadsensor
                 Issue:       GE-3444
                 Review:      DG

SH-2011-05-18-0: Bugfix:      output file of "qsub -pty" belongs to UGE admin
                              user instead of the job user
                 Issue:       GE-3473
                 Review:      HP
