@@ -63,8 +63,8 @@ POST_UNINSTALL = :
 host_alias = sparc-sun-solaris2.7
 host_triplet = sparc-sun-solaris2.7
 AR = ar
-CC = cc
-CPP = cc -E
+#CC = cc
+CPP = $(cc) -E
 GETCONF = getconf
 GLOBLIB = glob/libglob.a
 LIBOBJS = 
